@@ -158,6 +158,15 @@
     from {opacity: .4}
     to {opacity: 1}
     }
+
+    .Footer{
+        border: 0px;
+        font-size: small;
+        color: #717171;
+    }
+    #Footer_row_1{
+        font-weight: bold;
+    }
 </style>
     <title>fragrance-keebs</title>
 </head>
@@ -237,5 +246,24 @@
     }
     </script>
 
+    <!--Footer-->
+    <table class="Footer">
+        <tr class="Footer" id="Footer_row_1">
+            <td id="Footer_row_1">Policies</td>
+            <td id="Footer_row_1">Connect with us</td>
+        </tr>
+        <tr class="Footer">
+            <td><a href="TOS.html">Terms of service</a></td>
+            <td><a href="contact_us.html">Contact Us</a></td>
+        </tr>
+        <tr class="Footer">
+            <td><a href="Policies.html">Privacy Policy</a></td>
+            <td><a href="contact_us.html">Stores</a></td>
+        </tr>
+        <tr class="Footer">
+            <td><a href="TOS.html">Refund Policy</a></td>
+            <td><a href="contact_us.html">Careers</a></td>
+        </tr>
+    </table>
 </body>
 </html>
